--- a/underlayk/build.gradle
+++ b/underlayk/build.gradle
@@ -31,6 +31,10 @@ android {
     buildFeatures{
         dataBinding true
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 dependencies {
