--- a/basicktest/src/main/AndroidManifest.xml
+++ b/basicktest/src/main/AndroidManifest.xml
@@ -12,8 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SwiftKit">
 
-
-
         <activity
             android:name=".BasicKActivity"
             android:exported="true">
@@ -87,7 +85,16 @@
 
                 <data android:scheme="package" />
             </intent-filter>
-        </receiver> <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
+        </receiver>
+        <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
+        <!-- imagek -->
+        <activity
+            android:name=".imagek.ImageKCoilActivity"
+            android:exported="false" />
+        <activity
+            android:name=".imagek.ImageKActivity"
+            android:exported="false" />
+        <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
         <!-- manifestk -->
         <activity
             android:name=".manifestk.ManifestKActivity"
@@ -139,8 +146,8 @@
             android:name=".utilk.UtilKActivity"
             android:exported="false" />
         <activity
-                android:name=".utilk.androidx.UtilKActionBarActivity"
-                android:exported="false" />
+            android:name=".utilk.androidx.UtilKActionBarActivity"
+            android:exported="false" />
         <activity
             android:name=".utilk.android.UtilKViewActivity"
             android:exported="false" />
