--- a/uicorektest/src/main/AndroidManifest.xml
+++ b/uicorektest/src/main/AndroidManifest.xml
@@ -11,13 +11,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SwiftKit">
 
-        <!--        <meta-data-->
-        <!--            android:name="design_width_in_dp"-->
-        <!--            android:value="800"/>-->
-        <!--        <meta-data-->
-        <!--            android:name="design_height_in_dp"-->
-        <!--            android:value="1280"/>-->
-
+        <!-- <meta-data -->
+        <!-- android:name="design_width_in_dp" -->
+        <!-- android:value="800"/> -->
+        <!-- <meta-data -->
+        <!-- android:name="design_height_in_dp" -->
+        <!-- android:value="1280"/> -->
         <activity
             android:name=".UicoreKActivity"
             android:exported="true">
@@ -26,13 +25,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
+        </activity> <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
         <!-- toastk -->
         <activity
             android:name=".toastk.ToastKActivity"
-            android:exported="false" />
-        <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
+            android:exported="false" /> <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
         <!-- adaptk -->
         <activity
             android:name=".adaptk.AdaptKActivity"
@@ -55,7 +52,7 @@
             android:exported="false" />
         <activity
             android:name=".adapterk.AdapterKRecyclerVBActivity"
-            android:exported="false" /><!-- ///////////////////////////////////////////////////////////////////////////////////// -->
+            android:exported="false" /> <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
         <!-- btnk -->
         <activity
             android:name=".btnk.BtnKActivity"
@@ -79,6 +76,9 @@
             android:name=".imagek.ImageKBindingAdapterActivity"
             android:exported="false" /> <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
         <!-- layoutk -->
+        <activity
+            android:name=".layoutk.LayoutKRollTextActivity"
+            android:exported="false" />
         <activity
             android:name=".layoutk.LayoutKSpinnerActivity"
             android:exported="false" />
