--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -55,6 +55,8 @@ android {
 }
 
 dependencies {
+    //////////////////////////////////////////////////////////////////
+    //google
     api "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
     api 'androidx.appcompat:appcompat:1.4.1'
     api 'androidx.core:core-ktx:1.7.0'
