--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -131,6 +131,7 @@ dependencies {
 
     //glide
     api 'com.github.bumptech.glide:glide:4.12.0'//图片加载库
+    api "com.github.bumptech.glide:okhttp3-integration:4.12.0"
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     //////////////////////////////////////////////////////////////////
