--- a/debugk/src/main/AndroidManifest.xml
+++ b/debugk/src/main/AndroidManifest.xml
@@ -3,15 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mozhimen.debugk">
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <!--/////////////////////////////////////////////////////////////////////////-->
+    <!--传感器/手机-->
+    <!--/////////////////////////////////////////////////////////////////////////-->
+
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission
         android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
+
+    <!--/////////////////////////////////////////////////////////////////////////-->
+    <!--网络/状态-->
+    <!--/////////////////////////////////////////////////////////////////////////-->
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--/////////////////////////////////////////////////////////////////////////-->
+    <!--application-->
+    <!--/////////////////////////////////////////////////////////////////////////-->
 
     <application>
         <activity
