--- a/uicorek/src/main/AndroidManifest.xml
+++ b/uicorek/src/main/AndroidManifest.xml
@@ -2,6 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mozhimen.uicorek">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <!--/////////////////////////////////////////////////////////////////////////-->
+    <!--传感器/手机-->
+    <!--/////////////////////////////////////////////////////////////////////////-->
+
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <!--/////////////////////////////////////////////////////////////////////////-->
+    <!--网络/状态-->
+    <!--/////////////////////////////////////////////////////////////////////////-->
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
