--- a/underlayk/src/main/AndroidManifest.xml
+++ b/underlayk/src/main/AndroidManifest.xml
@@ -3,7 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mozhimen.underlayk">
 
+    <!--/////////////////////////////////////////////////////////////////////////-->
+    <!--传感器/手机-->
+    <!--/////////////////////////////////////////////////////////////////////////-->
+
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <!--/////////////////////////////////////////////////////////////////////////-->
+    <!--传感器/手机-->
+    <!--/////////////////////////////////////////////////////////////////////////-->
+
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
