--- a/basicktest/build.gradle
+++ b/basicktest/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.github.getActivity:XXPermissions:18.5'
 
     //test
     testImplementation 'junit:junit:4.13.2'
