--- a/uicorek/src/main/AndroidManifest.xml
+++ b/uicorek/src/main/AndroidManifest.xml
@@ -14,4 +14,17 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--/////////////////////////////////////////////////////////////////////////-->
+    <!--Application-->
+    <!--/////////////////////////////////////////////////////////////////////////-->
+
+    <application
+        android:allowBackup="true"
+        android:supportsRtl="true">
+        <activity
+            android:name=".textk.edit.bar.TextKEditBarActivity"
+            android:theme="@style/ThemeK_Dialog.Activity"
+            android:windowSoftInputMode="stateAlwaysVisible" />
+    </application>
+
 </manifest>
