--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     api 'com.google.android.material:material:1.5.0'
     api 'androidx.fragment:fragment-ktx:1.4.0'
     //api 'androidx.activity:activity-ktx:1.7.2'
+    api 'androidx.documentfile:documentfile:1.0.1'
 
     //////////////////////////////////////////////////////////////////
     //multidex
