--- a/basicktest/build.gradle
+++ b/basicktest/build.gradle
@@ -42,10 +42,10 @@ android {
 dependencies {
     implementation project(':basick')
     implementation project(':uicorek')
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation project(':AUICoreKit:recyclerk')
+    implementation project(':ANavigateKit_Navigation:navigatek_navigation')
+    implementation project(':AManifestKit_XXPermissions:manifestk_xxpermissions')
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.github.getActivity:XXPermissions:18.5'
 
     //test
     testImplementation 'junit:junit:4.13.2'
