--- a/settings.gradle
+++ b/settings.gradle
@@ -24,4 +24,25 @@ include ':basick'
 include ':basicktest'
 include ':uicorek'
 include ':uicorektest'
- 
+//JUtilKit
+include ":JUtilKit"
+project(':JUtilKit').projectDir = new File("D:\\WorkSpace\\GitHub\\JUtilKit")
+include ':JUtilKit:utilk_android'
+include ':JUtilKit:utilk_java'
+//test
+//ANavigateKit_Navigation
+include ":ANavigateKit_Navigation"
+project(':ANavigateKit_Navigation').projectDir = new File("D:\\WorkSpace\\GitHub\\ANavigateKit_Navigation")
+include ':ANavigateKit_Navigation:navigatek_navigation'
+//AUICoreKit
+include ":AUICoreKit"
+project(':AUICoreKit').projectDir = new File("D:\\WorkSpace\\GitHub\\AUICoreKit")
+include ':AUICoreKit:recyclerk'
+include ':AUICoreKit:vhk'
+include ':AUICoreKit:layoutk_blur'
+include ':AUICoreKit:layoutk'
+//AManifestKit_XXPermissions
+include ":AManifestKit_XXPermissions"
+project(':AManifestKit_XXPermissions').projectDir = new File("D:\\WorkSpace\\GitHub\\AManifestKit_XXPermissions")
+include ':AManifestKit_XXPermissions:manifestk_xxpermissions'
+include ':AManifestKit_XXPermissions:library'
