--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     //////////////////////////////////////////////////////////////////
     //google
     api "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
-    api 'androidx.appcompat:appcompat:1.4.1'//1.6.1
+    api 'androidx.appcompat:appcompat:1.6.1'
     api 'androidx.core:core-ktx:1.7.0'//1.10.1
     api 'com.google.android.material:material:1.5.0'//1.9.0
     api 'androidx.fragment:fragment-ktx:1.6.2'
