--- a/basicktest/src/main/AndroidManifest.xml
+++ b/basicktest/src/main/AndroidManifest.xml
@@ -202,6 +202,9 @@
             android:name=".utilk.android.UtilKContextDirActivity"
             android:exported="false" />
         <activity
+            android:name=".utilk.android.UtilKGraphicsActivity"
+            android:exported="false" />
+        <activity
             android:name=".utilk.android.UtilKApkActivity"
             android:exported="false" />
         <activity
