--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.6.1'
     api 'androidx.core:core-ktx:1.7.0'//1.10.1
     api 'com.google.android.material:material:1.5.0'//1.9.0
+    api 'androidx.activity:activity:1.7.0'
     api 'androidx.fragment:fragment-ktx:1.6.2'
     api 'androidx.activity:activity-ktx:1.7.2'
     api 'androidx.documentfile:documentfile:1.0.1'
@@ -92,7 +93,7 @@ dependencies {
     api "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     //work manager
-    api 'androidx.work:work-runtime:2.8.1'
+//    api 'androidx.work:work-runtime:2.8.1'
 
     //////////////////////////////////////////////////////////////////
     //databinding
